<?xml version="1.0" encoding="utf-8"?>
<resources>
	<!--	title for the application	-->
	<string name="app_name">Remote Control</string>
	<!--	title for the ip address boxes -->
	<string name="ip_address">IP Address</string>
	<!--	hints for all the number boxes	-->
	<string name="ip_part1_hint">123</string>
	<string name="ip_part2_hint">456</string>
	<string name="ip_part3_hint">789</string>
	<string name="ip_part4_hint">101</string>

<!--	<string name="ip_p1_text">192</string>
	<string name="ip_p2_text">168</string>
	<string name="ip_p3_text">0</string>
	<string name="ip_p4_text">5</string>
	<string name="port_text">4201</string>-->


	<!--	title for the port box	-->
	<string name="port">Port</string>
	<!--	hint for the port boxes-->
	<string name="port_hint">4201</string>
	<!--	title for the connect button	-->
	<string name="connect_text">Connect</string>
	<!--	title for the reset button	-->
	<string name="reset_text">Reset</string>
	
	<!--	label for the connected to, information	-->
	<string name="connected_label">nothing</string>
	
	<!--	title for the controls activity	-->
	<string name="controls">Controls</string>
	<!--	label for the vehicle controls	-->
	<string name="vehicle_controls_label">Vehicle Controls</string>

	<!-- label for the turret controls     -->
	<string name="turret_label">Turret Controls</string>
	
	<!-- label for the fire button -->
	<string name="fire_button_label">Fire!</string>
</resources>
